HISTORY

(git master)

  * [Enter new changes just after this line - do not remove this line]

  ++ New features:

  2017-02-28: Simon Goldschmidt
  * Added LWIP_SINGLE_NETIF for small targets with only one netif

  2017-02-17: Simon Goldschmidt
  * Improved DNS_LOCAL_HOSTLIST interface

  2017-02-10: David van Moolenbroek
  * Implement UDP and RAW multicast support for IPv6 (core API, not netconn/sockets)

  2017-02-10: Simon Goldschmidt
  * tcp_close does not fail on memory error (instead, FIN is sent from tcp_tmr)

  2017-02-04: David van Moolenbroek
    - IPv6 scopes support
  
  2017-01-08: David van Moolenbroek
  * Extensions to RAW API (patch #9208)
    - Connected RAW PCBs
    - Add raw_sendto_if_src()
    - Support IP_HDRINCL socket option

  ++ Bugfixes:

  2017-03-01: Simon Goldschmidt
  * httpd: LWIP_HTTPD_POST_MANUAL_WND: fixed double-free when httpd_post_data_recved
    is called nested from httpd_post_receive_data() (bug #50424)

  2017-02-28: David van Moolenbroek/Simon Goldschmidt
  * tcp: fixed bug #50418: LWIP_EVENT_API: fix invalid calbacks for SYN_RCVD pcb

  2017-02-24: Simon Goldschmidt
  * sockets.c: fixed close race conditions in lwip_select (for LWIP_NETCONN_FULLDUPLEX)

  2017-02-24: Simon Goldschmidt
  * sockets.c: fixed that select ignored invalid/not open sockets in the fd_sets (bug #50392)

  2017-02-16: Simon Goldschmidt
  * LWIP_NETCONN_FULLDUPLEX: fixed shutdown during write (bug #50274)

  2017-01-18: Dirk Ziegelmeier
  * Fix zero-copy RX, see bug bug #50064. PBUF_REFs were not supported as ARP requests.

  2017-01-11: David van Moolenbroek
  * Lots of IPv6 related fixes and improvements

(STABLE-2.0.1)
 
  ++ New features:

  2016-12-31: Simon Goldschmidt
  * tcp.h/.c: added function tcp_listen_with_backlog_and_err() to get the error
    reason when listening fails (bug #49861)

  2016-12-20: Erik Andersen
  * Add MQTT client

  2016-12-14: Jan Breuer:
  * opt.h, ndc.h/.c: add support for RDNSS option (as per RFC 6106)
